install angularjs and add .gitignore for node modules

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Tyler Youngblood",
+  "license": "ISC",
+  "dependencies": {
+    "angular": "^1.7.1"
+  }
 }
