--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "angular": "^1.7.1",
     "angular-route": "^1.7.1",
-    "http-server": "^0.11.1"
+    "http-server": "^0.11.1",
+    "ng-grid": "^2.0.1"
   }
 }
