--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "angular": "^1.7.1",
     "angular-route": "^1.7.1",
     "http-server": "^0.11.1",
-    "ng-grid": "^2.0.1"
+    "ng-grid": "^2.0.1",
+    "restangular": "^1.6.1"
   }
 }
